clear button fix color contrast

--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -1,4 +1,4 @@
-.minimal-header-container{
+.minimal-header-container {
     display: grid !important;
     grid-column-gap: 32px;
 }
@@ -125,7 +125,10 @@ main>header {
 .filter-options {
     margin: 0;
 }
-.filter-options input, label, select{
+
+.filter-options input,
+label,
+select {
     cursor: pointer;
 }
 
@@ -173,7 +176,7 @@ details dt::after {
 }
 
 .label_input {
-    font-size: 1rem ;
+    font-size: 1rem;
 }
 
 fieldset {
@@ -184,7 +187,7 @@ fieldset>p {
     margin-top: .25em !important
 }
 
-.fieldset-subtitles{
+.fieldset-subtitles {
     margin-top: 1.5em !important;
     color: var(--wai-green);
 }
@@ -323,67 +326,82 @@ fieldset label:hover a:hover {
 }
 
 @media (max-width: 60em) {
-       
+
     .courses-list-header .field {
         grid-column: 1 / 8;
     }
+
     .courses-list-header .sort-by {
         grid-column: 1 / 8;
     }
 }
 
-#status{
+#status {
     margin: 0;
 }
 
-#filter-courses-info{
+#filter-courses-info {
     background-color: var(--ocean);
-    color:var(--pure-white);
+    color: var(--pure-white);
     display: grid;
     align-items: center;
 }
 
-#filter-courses-info button{
-    margin: 0; 
+#filter-courses-info button {
+    margin: 0;
     padding: .3em;
 }
 
-.button-clear-button{
+.button-clear-button {
     cursor: pointer;
     color: var(--off-black);
     border: 2px solid var(--line-grey);
 }
-.button-clear-button:hover{
+
+.button-clear-button:hover, .button-clear-button:focus {
     background: var(--off-white);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     color: black;
+    outline-offset: 2px;
+    outline-color: white;
 }
 
-.button-clear-button::before{
-    margin: 0; 
+.button-clear-button::before {
+    margin: 0;
     margin-right: .3em;
     margin-top: .2em;
     content: url(/content-images/wai-course-list/clear.svg) !important;
 }
 
-#filter-courses-info .div-clear-filters{
+.button-clear-button::before {
+    margin: 0;
+    margin-right: .3em;
+    margin-top: .2em;
+    content: url(/content-images/wai-course-list/clear.svg) !important;
+}
+
+
+
+
+#filter-courses-info .div-clear-filters {
     grid-column: 3/3;
     text-align: right;
 }
 
 
-.hidden-element{
+.hidden-element {
     visibility: hidden !important;
     display: none !important;
 }
 
 
-.infobox h4{
+.infobox h4 {
     border: 1px solid var(--line-grey);
     background-color: #f3f3f3;
     padding: 1em;
     font-size: .85em;
 }
+
 .infobox {
     background-color: var(--pure-white);
     padding: 1em;
@@ -451,23 +469,29 @@ details .helperinfo {
 }
 
 
-#preview-submission-overlay  {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
+#preview-submission-overlay {
+    position: fixed;
+    /* Sit on top of the page content */
+    display: none;
+    /* Hidden by default */
     /*align-items: center;*/
     justify-content: center;
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+    width: 100%;
+    /* Full width (cover the whole page) */
+    height: 100%;
+    /* Full height (cover the whole page) */
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.8); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    overflow: scroll; 
-    
+    background-color: rgba(255, 255, 255, 0.8);
+    /* Black background with opacity */
+    z-index: 2;
+    /* Specify a stack order in case you're using a different order for other elements */
+    overflow: scroll;
+
 }
-  
+
 .overlay-content {
     width: 50em;
     height: min-content;
@@ -482,18 +506,18 @@ details .helperinfo {
     position: relative;
     margin-top: 2rem;
 }
-  
+
 .details-preview {
     text-align: left;
     margin-bottom: 2em;
     padding-left: 2em;
 }
-  
+
 .overlay-content button {
     cursor: pointer;
 }
-  
-.overlay-content ul{
+
+.overlay-content ul {
     line-height: 3em;
 }
 
@@ -504,4 +528,5 @@ details .helperinfo {
     margin-right: 2em;
     margin-top: 2em;
 }
+
 
